still working on the skeleton

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,7 +1,7 @@
 project(Grafology-Tests LANGUAGES C CXX)
 
 add_executable(tests tests.cpp)
-target_link_libraries(tests PRIVATE Catch2::Catch2WithMain fmt::fmt-header-only)
+target_link_libraries(tests PRIVATE Grafology Catch2::Catch2WithMain fmt::fmt-header-only)
 
 include(CTest)
 include(Catch)
