still working on the installation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,11 @@ cmake_minimum_required(VERSION 3.26.0)
 project(grafology VERSION 0.1.0 LANGUAGES C CXX)
 set(CMAKE_CXX_STANDARD 23)
 
+get_property(MULTI_CONFIG_GENERATOR GLOBAL PROPERTY GENERATOR_IS_MULTI_CONFIG)
+if(MULTI_CONFIG_GENERATOR)
+	set(CMAKE_CONFIGURATION_TYPES Debug Release RelWithDebInfo)
+endif()
+
 message(STATUS "Using compiler ${CMAKE_CXX_COMPILER_ID} ${CMAKE_CXX_COMPILER_VERSION}")
 
 find_package(fmt CONFIG REQUIRED)
@@ -13,19 +18,20 @@ find_package(catch2 CONFIG REQUIRED)
 set(GRAFOLOGY_SRC src/cpp/Grafology.cpp)
 set(GRAFOLOGY_HDRS src/include/grafology/grafology.h)
 
-add_library(${PROJECT_NAME} ${GRAFOLOGY_SRC} ${GRAFOLOGY_HDRS})
+add_library(${PROJECT_NAME} STATIC ${GRAFOLOGY_SRC} ${GRAFOLOGY_HDRS})
 target_include_directories (${PROJECT_NAME} 
     PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src/include> 
     PUBLIC $<INSTALL_INTERFACE:include>
 )
 set_target_properties(${PROJECT_NAME} PROPERTIES VERSION ${PROJECT_VERSION})
 set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER ${GRAFOLOGY_HDRS})
+#set_target_properties(${PROJECT_NAME} IMPORTED_LOCATION "")
 
 # as we don't want fmt to be a dependency of the library, we can't use target_link_libraries
 # i.e.: target_link_libraries(${PROJECT_NAME} PRIVATE fmt::fmt-header-only)
 # so let's use our own version
 set_target_properties(${PROJECT_NAME} PROPERTIES
-  COMPILE_OPTIONS "\$<\$<AND:\$<COMPILE_LANGUAGE:CXX>,\$<CXX_COMPILER_ID:MSVC>>:/utf-8>"
+  COMPILE_OPTIONS "\$<\$<AND:\$<COMPILE_LANGUAGE:CXX>,\$<CXX_COMPILER_ID:MSVC>>:/utf-8;/EHsc>"
   COMPILE_DEFINITIONS "FMT_HEADER_ONLY=1"
 )
 target_include_directories(${PROJECT_NAME} PRIVATE $<TARGET_PROPERTY:fmt::fmt-header-only,INTERFACE_INCLUDE_DIRECTORIES>)
@@ -54,7 +60,7 @@ write_basic_package_version_file(
 install(
     TARGETS ${PROJECT_NAME}
     EXPORT ${PROJECT_NAME}Targets
-    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    ARCHIVE DESTINATION lib/${CMAKE_BUILD_TYPE}
     PUBLIC_HEADER DESTINATION include/${PROJECT_NAME}
 )
 
