--- a/grafologyConfig.cmake.in
+++ b/grafologyConfig.cmake.in
@@ -1,3 +1,4 @@
 @PACKAGE_INIT@
-include(CMakeFindDependencyMacro)
-include ("${CMAKE_CURRENT_LIST_DIR}/grafologyTargets.cmake")
+# include(CMakeFindDependencyMacro)
+include ("${CMAKE_CURRENT_LIST_DIR}/grafologyTargets.${CMAKE_BUILD_TYPE}.cmake")
+check_required_components(@PROJECT_NAME@)
