--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,6 +1,6 @@
 project(Grafology-Tests LANGUAGES C CXX)
 
-add_executable(tests tests_vertex.cpp)
+add_executable(tests test_vertex.h tests.cpp)
 target_link_libraries(tests PRIVATE grafology Catch2::Catch2WithMain fmt::fmt-header-only)
 
 include(CTest)
