--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,7 +1,7 @@
 project(Grafology-Tests LANGUAGES C CXX)
 
 add_executable(tests test_vertex.h tests.cpp)
-target_link_libraries(tests PRIVATE grafology Catch2::Catch2WithMain fmt::fmt-header-only)
+target_link_libraries(tests PRIVATE grafology Catch2::Catch2WithMain)
 
 include(CTest)
 include(Catch)
