1st version of the flat index map

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ set(GRAFOLOGY_SRC
     src/cpp/Grafology.cpp
     src/cpp/sparse_graph_impl.cpp
     src/cpp/dense_graph_impl.cpp
+    src/cpp/flat_index_map.cpp
 )
 
 set(GRAFOLOGY_HDRS 
@@ -26,6 +27,7 @@ set(GRAFOLOGY_HDRS
     src/include/grafology/graph_impl.h
     src/include/grafology/sparse_graph_impl.h
     src/include/grafology/dense_graph_impl.h
+    src/include/grafology/flat_index_map.h
 )
 
 add_library(${PROJECT_NAME} ${GRAFOLOGY_SRC} ${GRAFOLOGY_HDRS})
