--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,6 +1,10 @@
 project(Grafology-Tests LANGUAGES C CXX)
 
-add_executable(tests test_vertex.h tests.cpp)
+add_executable(
+    tests test_vertex.h 
+    test_flat_index_map.cpp
+    tests.cpp
+)
 target_link_libraries(tests PRIVATE grafology Catch2::Catch2WithMain)
 
 include(CTest)
