still working on the impl

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,7 +3,7 @@ project(Grafology-Tests LANGUAGES C CXX)
 add_executable(
     tests test_vertex.h 
     test_flat_index_map.cpp
-    tests.cpp
+    tests_graph_impl.cpp
 )
 target_link_libraries(tests PRIVATE grafology Catch2::Catch2WithMain)
 
