Added a bidirectional map for mapping internal indexes to user Vertex class

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,6 +2,7 @@ project(Grafology-Tests LANGUAGES C CXX)
 
 add_executable(
     tests test_vertex.h 
+    test_bimap.cpp
     test_flat_index_map.cpp
     tests_graph_impl.cpp
 )
