--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,9 +1,11 @@
 project(Grafology-Tests LANGUAGES C CXX)
 
 add_executable(
-    tests test_vertex.h 
-    test_bimap.cpp
-    test_flat_index_map.cpp
+    tests 
+    test_vertex.h 
+    tests_bimap.cpp
+    tests_flat_index_map.cpp
+    tests_graph.cpp
     tests_graph_impl.cpp
 )
 target_link_libraries(tests PRIVATE grafology Catch2::Catch2WithMain)
