Foixed previous commit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,8 @@ set(GRAFOLOGY_HDRS
     src/include/grafology/dense_graph_impl.h
     src/include/grafology/flat_index_map.h
     src/include/grafology/vertex.h 
+    src/include/grafology/algorithms/depth_first_search.h
+    src/include/grafology/algorithms/topological_sort.h
 )
 
 add_library(${PROJECT_NAME} ${GRAFOLOGY_SRC} ${GRAFOLOGY_HDRS})
