still working on the workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,7 +63,8 @@ jobs:
     - name: Build
       run: |
         cd ${{github.workspace}}
-        pwsh -f ./scripts.ps1 -BuildType ${{ matrix.build_type }} -CC ${{ matrix.c_compiler }} -CPP ${{ matrix.cpp_compiler }} -Clean
+        tree .
+        pwsh -file ./scripts.ps1 -BuildType ${{ matrix.build_type }} -CC ${{ matrix.c_compiler }} -CPP ${{ matrix.cpp_compiler }} -Clean
 
     - name: Test
       run: |
