--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,11 +45,11 @@ jobs:
           #   output_dir: bin/Linux/Release
         exclude:
           - os: windows-latest
-            c_compiler: gcc
+            compiler: gcc
           - os: windows-latest
-            c_compiler: clang
+            compiler: clang
           - os: ubuntu-24.04
-            c_compiler: cl
+            compiler: cl
 
     steps:
     - uses: actions/checkout@v4
