--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,20 +29,20 @@ jobs:
             compiler: cl
             c_compiler: cl
             cpp_compiler: cl
-            output_dir: bin/Windows/Release
+            output_dir: bin/windows/Release
           - os: ubuntu-24.04
             preset: linux-x64-Release
             compiler: gcc
             c_compiler: gcc-14
             cpp_compiler: g++-14
-            output_dir: bin/Linux/Release
+            output_dir: bin/linux/Release
           # requires clang-19 which is not currently available on the GitHub images
           # - os: ubuntu-24.04
           #   preset: linux-x64-Release
           #   compiler: clang
           #   c_compiler: clang-19
           #   cpp_compiler: clang++-19
-          #   output_dir: bin/Linux/Release
+          #   output_dir: bin/linux/Release
         exclude:
           - os: windows-latest
             compiler: gcc
@@ -54,7 +54,9 @@ jobs:
     steps:
     - name: init
       run: |
+      if ("${{ matrix.os }}".startsWith("ubuntu")) {
         sudo apt install ninja-build
+      }
 
     - uses: actions/checkout@v4
 
