--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,10 @@ jobs:
 
     steps:
     - name: Install Ninja
-      uses: turtlesec-no/get-ninja@main
+      run: |
+        if ("${{ matrix.os }}".startsWith("ubuntu")) {
+          sudo apt install ninja-build
+        }
 
     - name: Checkout
       uses: actions/checkout@v4
@@ -68,7 +71,10 @@ jobs:
     - name: Build
       run: |
         cd ${{github.workspace}}
-        pwsh -file ./build.ps1 -BuildTypes ${{ matrix.build_type }} -CC ${{ matrix.c_compiler }} -CPP ${{ matrix.cpp_compiler }} -Clean
+        if ("${{ matrix.os }}".startsWith("windows")) {
+          ./scripts/vs-setup.ps1 -Version 2022 -Edition Community -Bits 64
+        }
+        ./scripts/build.ps1 -BuildTypes ${{ matrix.build_type }} -CC ${{ matrix.c_compiler }} -CPP ${{ matrix.cpp_compiler }} -Clean
 
     - name: Test
       run: |
