Bridge finding for graph implementations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,7 @@ set(GRAFOLOGY_HDRS
     src/include/grafology/vertex.h 
     src/include/grafology/algorithms/all_shortest_paths.h
     src/include/grafology/algorithms/breath_first_search.h
+    src/include/grafology/algorithms/bridges.h
     src/include/grafology/algorithms/depth_first_search.h
     src/include/grafology/algorithms/maximum_flow.h
     src/include/grafology/algorithms/minimum_spanning_tree.h
