--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
 
       matrix:
         # ubuntu-24.04 and not ubuntu-latest (22.04) as we need gcc-14
-        os: [ubuntu-24.04, windows-latest]
+        os: [ubuntu-24.04, windows-latest, macos-15]
         build_type: [Release]
         compiler: [gcc, cl]
         include:
@@ -30,6 +30,12 @@ jobs:
             c_compiler: cl
             cpp_compiler: cl
             output_dir: bin/windows/Release
+          - os: macos-15
+            preset: osx-arm64-Release
+            compiler: gcc
+            c_compiler: gcc-14
+            cpp_compiler: g++-14
+            output_dir: bin/osx/Release
           - os: ubuntu-24.04
             preset: linux-x64-Release
             compiler: gcc
@@ -46,9 +52,9 @@ jobs:
         exclude:
           - os: windows-latest
             compiler: gcc
-          - os: windows-latest
-            compiler: clang
           - os: ubuntu-24.04
+            compiler: cl
+          - os: macos-15
             compiler: cl
 
     steps:
@@ -56,6 +62,9 @@ jobs:
       run: |
         if ("${{ matrix.os }}".startsWith("ubuntu")) {
           sudo apt install ninja-build
+        }
+        else if ("${{ matrix.os }}".startsWith("macos")) {
+          brew install ninja
         }
 
     - name: Checkout
