--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,6 +77,9 @@ jobs:
         if ("${{ matrix.os }}".startsWith("windows")) {
           ./scripts/vs-setup.ps1 -Version 2022 -Edition Enterprise -Bits 64
         }
+        if ("${{ matrix.os }}".startsWith("macOS")) {
+          $env:VCPKG_ROOT = "${env:HOME}/vcpkg"
+        }
         ./scripts/build.ps1 -BuildTypes ${{ matrix.build_type }} -CC ${{ matrix.c_compiler }} -CPP ${{ matrix.cpp_compiler }} -Clean -RootDir "${{ github.workspace }}"
 
     - name: Test
