--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,8 +78,13 @@ jobs:
           ./scripts/vs-setup.ps1 -Version 2022 -Edition Enterprise -Bits 64
         }
         if ("${{ matrix.os }}".startsWith("macos")) {
-          $env:VCPKG_ROOT = "${env:HOME}/vcpkg"
+          write-host "VCPKG ->" (get-command vcpkg).Source
+          $env:VCPKG_ROOT = (Split-Path -Parent (get-command vcpkg).Source))
+          write-host "h -> ${env:VCPKG_ROOT}"
+          dir ${env:VCPKG_ROOT}
+          write-host "+==================+"
         }
+        dir env:
         ./scripts/build.ps1 -BuildTypes ${{ matrix.build_type }} -CC ${{ matrix.c_compiler }} -CPP ${{ matrix.cpp_compiler }} -Clean -RootDir "${{ github.workspace }}"
 
     - name: Test
