--- a/test-cmake/CMakeLists.txt
+++ b/test-cmake/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.25.0)
 project(test-cmake VERSION 0.1.0 LANGUAGES C CXX)
 set(CMAKE_CXX_STANDARD 23)
-list (APPEND CMAKE_PREFIX_PATH "${CMAKE_SOURCE_DIR}/../dist/Windows/cmake")
+list (APPEND CMAKE_PREFIX_PATH "${CMAKE_SOURCE_DIR}/../dist/${CMAKE_HOST_SYSTEM_NAME}/cmake")
 message(STATUS "=> ${CMAKE_PREFIX_PATH}")
 
 find_package(grafology CONFIG REQUIRED)
