Fixed latest commit?

--- a/test-cmake/CMakeLists.txt
+++ b/test-cmake/CMakeLists.txt
@@ -1,7 +1,17 @@
 cmake_minimum_required(VERSION 3.25.0)
 project(test-cmake VERSION 0.1.0 LANGUAGES C CXX)
 set(CMAKE_CXX_STANDARD 23)
-list (APPEND CMAKE_PREFIX_PATH "${CMAKE_SOURCE_DIR}/../dist/${CMAKE_HOST_SYSTEM_NAME}/cmake")
+
+if ("${CMAKE_HOST_SYSTEM_NAME}" STREQUAL "Windows")
+    set(DIST_OS "windows")
+elseif ("${CMAKE_HOST_SYSTEM_NAME}" STREQUAL "Linux")
+    set(DIST_OS "linux")
+elseif ("${CMAKE_HOST_SYSTEM_NAME}" STREQUAL "Darwin")
+    set(DIST_OS "osx")
+endif()
+
+set(OS_PREFIX ${})
+list (APPEND CMAKE_PREFIX_PATH "${CMAKE_SOURCE_DIR}/../dist/${DIST_OS}/cmake")
 message(STATUS "=> ${CMAKE_PREFIX_PATH}")
 
 find_package(grafology CONFIG REQUIRED)
