Added non-recursive version Trajan's SCC algo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,7 @@ set(GRAFOLOGY_HDRS
     src/include/grafology/algorithms/minimum_spanning_tree.h
     src/include/grafology/algorithms/requirements.h
     src/include/grafology/algorithms/shortest_path.h
+    src/include/grafology/algorithms/strongly_connected_components.h
     src/include/grafology/algorithms/topological_sort.h
     src/include/grafology/algorithms/transitive_closure.h
     src/include/grafology/internal/generator.h
