Starting refactoring for moving base types into a traits class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,7 @@ set(GRAFOLOGY_HDRS
     src/include/grafology/graph.h 
     src/include/grafology/graph_impl.h
     src/include/grafology/sparse_graph_impl.h
+    src/include/grafology/utilities.h 
     src/include/grafology/vertex.h 
     src/include/grafology/algorithms/all_shortest_paths.h
     src/include/grafology/algorithms/articulation_points.h
