--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ set(GRAFOLOGY_HDRS
     src/include/grafology/flat_index_map.h
     src/include/grafology/graph.h 
     src/include/grafology/graph_impl.h
+    src/include/grafology/graph_traits.h
     src/include/grafology/sparse_graph_impl.h
     src/include/grafology/utilities.h 
     src/include/grafology/vertex.h 
