--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,7 +75,7 @@ jobs:
           $VCPKG_ROOT="${{ github.workspace }}/tmp/vcpkg"
           git clone https://github.com/microsoft/vcpkg $VCPKG_ROOT
         }
-        ${{ matrix.python }} --user -m pip install requests
+        ${{ matrix.python }} -m pip install --user requests
 
     - name: Build
       run: |
