Still trying to get pip working on MacOS

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,7 +75,8 @@ jobs:
           $VCPKG_ROOT="${{ github.workspace }}/tmp/vcpkg"
           git clone https://github.com/microsoft/vcpkg $VCPKG_ROOT
         }
-        ${{ matrix.python }} --user -m pip install requests
+        # --break-system-packages is required to install requests on the MacOS GitHub images
+        ${{ matrix.python }} -m pip install --break-system-packages requests
 
     - name: Build
       run: |
